src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_app_comment_before_last_arg_indent-2.snap
---
source: src/regression_tests/format.rs
description: "{\n  v = lib.concat \".\" (\n    map toString\n      # comment\n      (builtins.filter f version)\n  );\n}"
---
{
  v = lib.concat "." (
    map toString
      # comment
      (builtins.filter f version)
  );
}
