src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_app_comment_before_last_arg_indent.snap
---
source: src/regression_tests/format.rs
description: "(map toString\n  # comment\n  (builtins.filter f version))"
---
(map toString
  # comment
  (builtins.filter f version)
)
