src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_app_multi_absorbable_args_indent-2.snap
---
source: src/regression_tests/format.rs
description: "f\n  {\n    a = 1;\n  }\n  (\n    b: c\n  )"
---
f {
  a = 1;
} (b: c)
