src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_app_multi_absorbable_args_indent.snap
---
source: src/regression_tests/format.rs
description: "runCommand \"n\"\n  {\n    a = 1;\n  }\n  ''\n    echo a\n  ''"
---
runCommand "n"
  {
    a = 1;
  }
  ''
    echo a
  ''
