src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_app_set_absorb_in_binding.snap
---
source: src/regression_tests/format.rs
description: "{\n  x = mk {\n    a = 1;\n  } ''\n    echo a\n  '';\n}"
---
{
  x =
    mk
      {
        a = 1;
      }
      ''
        echo a
      '';
}
