src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_assignment_non_simple_selector_breaks_rhs-2.snap
---
source: src/regression_tests/format.rs
description: "{\n  a.b.c.d.e = \"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\";\n}"
---
{
  a.b.c.d.e =
    "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa";
}
