src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_assignment_non_simple_selector_breaks_rhs.snap
---
source: src/regression_tests/format.rs
description: "{\n  \"PKG_CONFIG_GIMP_${pkgConfigMajorVersion}_0_GIMPLIBDIR\" = \"${placeholder \"out\"}/${gimp.targetLibDir}\";\n}"
---
{
  "PKG_CONFIG_GIMP_${pkgConfigMajorVersion}_0_GIMPLIBDIR" =
    "${placeholder "out"}/${gimp.targetLibDir}";
}
