src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_assignment_rhs_update_concat_plus_case1-3.snap
---
source: src/regression_tests/format.rs
description: "{ x = a.b or [ ] ++ [ y ]; }"
---
{ x = a.b or [ ] ++ [ y ]; }
