src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_assignment_rhs_update_concat_plus_case1-5.snap
---
source: src/regression_tests/format.rs
description: "{ x = lib.optionals a [ p ] ++ lib.optionals b [ q ]; }"
---
{ x = lib.optionals a [ p ] ++ lib.optionals b [ q ]; }
